--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ python:
   - "2.7"
 install:
   - pip install -r requirements.txt
-script: make all && python functions.py
+script: make all && python -c 'import functions'
 
